--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h1 {
 .links {
 
   text-align: center;   /* Centers list items horizontally */
-  background-color: hwb(52 0% 0%);
+  background-color: #ffdd00;
 
+}
+
+* {
+  outline: 2px solid red;
 }
